Update Terms of Service with user responsibility details
Added clarification regarding user responsibilities in the Terms of Service.

--- a/terms.html
+++ b/terms.html
@@ -27,7 +27,7 @@
     <p>The service is billed as a one-time fee. Due to the digital nature of the product (immediate file download), all sales are final. Refunds are granted only at our sole discretion in cases of technical failure.</p>
 
     <h2>4. User Responsibilities</h2>
-    <p>You are responsible for the accuracy of the information you enter. We are not responsible for typos, errors, or omissions in the final document.</p>
+    <p>You are responsible for the accuracy of the information you enter. We are not responsible for typos, errors, or omissions in the final document. This program is just a formatting tool, so any edits are intended to be done by the user in the document after the document is downloaded to the user's computer or device.</p>
 
     <h2>5. Limitation of Liability</h2>
     <p>Smart Resume Pro shall not be liable for any indirect, incidental, or consequential damages resulting from the use or inability to use this service.</p>
@@ -38,4 +38,5 @@
         <p>&copy; 2026 Smart Resume Pro. All rights reserved.</p>
     </footer>	
 </body>
+
 </html>
