Add pricing information to the hero section
Added a pricing note for resume generation.

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         <p>A smart formatting tool that generates clean, ATS-friendly Word documents. Privacy-first design with zero data retention.</p>
         
 		<a href="https://resumebuilderpy-puwkqmoskvdljojvxfgj2t.streamlit.app/" class="cta-button">Create My Resume Now</a>
+<p style="font-size: 0.9rem; margin-top: 10px; color: var(--text-light);">Flat $2.99 per generation. No subscriptions.</p>
     </section>
 
     <section class="features">
@@ -209,4 +210,5 @@
     </footer>
 
 </body>
+
 </html>
