--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <p>A smart formatting tool that generates clean, ATS-friendly Word documents. Privacy-first design with zero data retention.</p>
         
 		<a href="https://resumebuilderpy-puwkqmoskvdljojvxfgj2t.streamlit.app/" class="cta-button">Create My Resume Now</a>
-<p style="font-size: 0.9rem; margin-top: 10px; color: var(--text-light);">Flat $2.99 per generation. No subscriptions.</p>
+<p style="font-size: 0.9rem; margin-top: 10px; color: var(--text-light);">$2.99 per generation. No subscriptions.</p>
     </section>
 
     <section class="features">
@@ -212,3 +212,4 @@
 </body>
 
 </html>
+
