Modify contact details in privacy policy
Updated contact information in the privacy policy.

--- a/privacy.html
+++ b/privacy.html
@@ -37,11 +37,12 @@
     <p>Payments are processed securely via Stripe. We do not store or have access to your credit card information. Please refer to <a href="https://stripe.com/privacy" target="_blank">Stripe's Privacy Policy</a> for details on how they handle your financial data.</p>
 
     <h2>6. Contact</h2>
-    <p>If you have questions about this policy, please contact us at eugeneresume@yahoo.com.</p>
+    <p>If you have questions about this policy, please contact us at eugeneresume@yahoo.com or +1 (541) 286-7871.</p>
 <footer>
         <div style="margin-bottom: 1rem;">
         </div>
         <p>&copy; 2026 Smart Resume Pro. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
