--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <footer>
         <div style="margin-bottom: 1rem;">
             <a href="privacy.html" style="color: #64748b; margin: 0 10px; text-decoration: none;">Privacy Policy</a> | 
-            <a href="terms.html" style="color: #64748b; margin: 0 10px; text-decoration: none;">Terms of Service</a>
+            <a href="terms.html" style="color: #64748b; margin: 0 10px; text-decoration: none;">Terms of Service</a> |
 			<a href="support.html" style="color: #64748b; margin: 0 10px; text-decoration: none;">Support</a>
         </div>
         <p>&copy; 2026 Smart Resume Pro. All rights reserved.</p>
@@ -213,5 +213,6 @@
 </body>
 
 </html>
+
 
 
