--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Resume Pro - Privacy-First Resume Builder</title>
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="images/favicon.png">
     <style>
         :root {
             --primary: #2563eb; /* Professional Blue */
@@ -214,6 +214,7 @@
 </body>
 
 </html>
+
 
 
 
